User side completed

--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -201,7 +201,7 @@ p {
 
 /* Hero Section */
 #hero {
-	background-image: url(./img/bgimg.jpg);
+	background-image: url(https://i.postimg.cc/FsXwGkkg/bgimg.jpg);
 	background-size: cover;
 	background-position: top center;
 	position: relative;
